<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.deniswilson.segfarid.TelaCadastro">


    <ImageView
        android:id="@+id/imgLogoCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/edtCadEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/emailCad"
        android:layout_margin="13dp"/>

    <EditText
        android:id="@+id/edtCadSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/senhaCad"
        android:layout_margin="13dp"/>

    <EditText
        android:id="@+id/edtCadSenhaConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/senhaConf"
        android:layout_margin="13dp"/>

    <EditText
        android:id="@+id/edtCadTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/telefoneCad"
        android:layout_margin="13dp"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/cadastrarCad"
        android:layout_margin="13dp" />


</LinearLayout>
