<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/imgLogoLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="50dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/Senha"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Entrar" />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CadastrarUsu"
        android:layout_marginTop="100dp"
        android:textAlignment="center" />

</LinearLayout>
